# RustStream

./: .env.example  .gitignore  Cargo.toml  DOWNLOADS.md  LICENSE  README.md  run.sh
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: api.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  onboarding.rs  templates.rs  tmdb.rs  vidking.rs
app/static/: setup.html  setup.js  style.css
app/style/: main.css
app/templates/: base.html  home.html  movie_detail.html  player.html  search.html  tv_detail.html
desktop/: README.md  build-mac-app.zsh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
