[workspace]
resolver = "2"
members = ["app"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ratatui = "0.26"
crossterm = "0.27"
