[package]
name = "streaming-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "streaming-app"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
